--- a/canvas.html
+++ b/canvas.html
@@ -1,6 +1,8 @@
-<!DOCTYPE HTML>
-<html>
+<!doctype html>
+<html lang="de">
   <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isogame</title>
     <script type="text/javascript" src="Helper.js"></script>
     <script type="text/javascript" src="GameObject.js"></script>
