csp: second try

--- a/canvas.html
+++ b/canvas.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="Content-Security-Policy: default-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     <title>Isogame</title>
     <script src="Helper.js" />
     <script src="GameObject.js" />
