--- a/canvas.html
+++ b/canvas.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     <title>Isogame</title>
-    <script src="Helper.js" />
-    <script src="GameObject.js" />
-    <script src="Map.js" />
-    <script src="Main.js" />
+    <script src="Helper.js"></script>
+    <script src="GameObject.js"></script>
+    <script src="Map.js"></script>
     <style>
       canvas { border: 1px solid black; }
       div#preload { display: none; }
@@ -24,5 +23,6 @@
         <img src="data/img/move_tank_w.png" width="1" height="1" alt="preloading content" />
         <img src="data/img/move_tank_s.png" width="1" height="1" alt="preloading content" />
     </div>
+    <script src="Main.js"></script>
   </body>
 </html>
