--- a/canvas.html
+++ b/canvas.html
@@ -8,9 +8,9 @@
     <script src="Helper.js"></script>
     <script src="GameObject.js"></script>
     <script src="Map.js"></script>
-    <style src="style.css"></style>
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body onload="init();">
+  <body>
     <canvas id="map" width="600" height="600"></canvas>
     <div id="preload">
         <img src="data/img/ground_grass.png" width="1" height="1" alt="preloading content" />
